# pixi-diff-to-markdown

./: .copier-answers.yml  .gitattributes  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  diff.json  experiments.md  pixi.toml  pyproject.toml  specification.md  test.json
.github/scripts/: check-deps.sh
.github/workflows/: build.yml  bump-versions.yml  ci.yml  update-lockfiles.yml
pixi_diff_to_markdown/: __main__.py  cli.py  diff.py  environments_to_string.py  find_environments.py  markdown.py  models.py  pydantic_settings_extension.py  settings.py  summary.py
tests/: conftest.py  test_cli.py  test_converter.py  test_find_environments.py
tests/resources/: diff-example-v6-lockfile.json  diff-example.json  diff-mixed-package-types.json  diff-pixi-diff-to-markdown-example.json  diff-polarify.json  output.md  test.json
tests/resources/diff-example/: merge-merge-all_hide-tables-False_change-type-True_explicit-True_package-type-False.md  merge-merge-all_hide-tables-True_change-type-False_explicit-False_package-type-False.md  merge-merge-all_hide-tables-True_change-type-False_explicit-True_package-type-True.md  merge-merge-all_hide-tables-True_change-type-True_explicit-False_package-type-True.md  merge-no_hide-3_change-type-False_explicit-False_package-type-False.md  merge-no_hide-3_change-type-False_explicit-False_package-type-True.md  merge-no_hide-3_change-type-False_explicit-True_package-type-False.md  merge-no_hide-3_change-type-False_explicit-True_package-type-True.md  merge-no_hide-3_change-type-True_explicit-False_package-type-False.md  (+169 more)
tests/resources/diff-example-v6-lockfile/: merge-no_hide-3_change-type-False_explicit-False_package-type-False.md  merge-no_hide-3_change-type-False_explicit-False_package-type-True.md  merge-no_hide-3_change-type-False_explicit-True_package-type-False.md  merge-no_hide-3_change-type-False_explicit-True_package-type-True.md  merge-no_hide-3_change-type-True_explicit-False_package-type-False.md  merge-no_hide-3_change-type-True_explicit-False_package-type-True.md  merge-no_hide-3_change-type-True_explicit-True_package-type-False.md  merge-no_hide-3_change-type-True_explicit-True_package-type-True.md  merge-no_hide-False_change-type-False_explicit-False_package-type-False.md  merge-no_hide-False_change-type-False_explicit-False_package-type-True.md  merge-no_hide-False_change-type-False_explicit-True_package-type-False.md  merge-no_hide-False_change-type-False_explicit-True_package-type-True.md  merge-no_hide-False_change-type-True_explicit-False_package-type-False.md  merge-no_hide-False_change-type-True_explicit-False_package-type-True.md  merge-no_hide-False_change-type-True_explicit-True_package-type-False.md  merge-no_hide-False_change-type-True_explicit-True_package-type-True.md  merge-no_hide-True_change-type-False_explicit-False_package-type-False.md  merge-no_hide-True_change-type-False_explicit-False_package-type-True.md  merge-no_hide-True_change-type-False_explicit-True_package-type-False.md  merge-no_hide-True_change-type-False_explicit-True_package-type-True.md  merge-no_hide-True_change-type-True_explicit-False_package-type-False.md  merge-no_hide-True_change-type-True_explicit-False_package-type-True.md  merge-no_hide-True_change-type-True_explicit-True_package-type-False.md  merge-no_hide-True_change-type-True_explicit-True_package-type-True.md  merge-no_hide-auto_max-rows-0_change-type-False_explicit-False_package-type-False.md  merge-no_hide-auto_max-rows-0_change-type-False_explicit-True_package-type-True.md  merge-no_hide-no_change-type-False_explicit-False_package-type-False.md  merge-no_hide-no_change-type-False_explicit-False_package-type-True.md  merge-no_hide-no_change-type-False_explicit-True_package-type-False.md  merge-no_hide-no_change-type-False_explicit-True_package-type-True.md  merge-no_hide-no_change-type-True_explicit-False_package-type-False.md  merge-no_hide-no_change-type-True_explicit-False_package-type-True.md  merge-no_hide-no_change-type-True_explicit-True_package-type-False.md  merge-no_hide-no_change-type-True_explicit-True_package-type-True.md  merge-no_hide-no_max-rows-10_change-type-True_explicit-False_package-type-True.md  merge-no_hide-yes_change-type-False_explicit-False_package-type-False.md  merge-no_hide-yes_change-type-False_explicit-False_package-type-True.md  merge-no_hide-yes_change-type-False_explicit-True_package-type-False.md  merge-no_hide-yes_change-type-False_explicit-True_package-type-True.md  merge-no_hide-yes_change-type-True_explicit-False_package-type-False.md  (+94 more)
(+363 files in other folders)
