[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pixi-diff-to-markdown"
version = "0.2.5"
description = "Tool for converting `pixi update` diffs to markdown"
authors = [{ name = "Pavel Zwerschke", email = "pavelzw@gmail.com" }]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.12"
readme = "README.md"
dependencies = [
  "pydantic >=2.10.2,<3",
  "py-rattler >=0.8.2,<0.9",
  "ordered-enum >=0.0.9,<0.0.10",
  "typer >=0.15.0,<0.16",
  "pydantic-settings >=2.6.1,<3",
  "more-itertools >=10.5.0,<11",
]

[project.urls]
repository = "https://github.com/pavelzw/pixi-diff-to-markdown"

[project.scripts]
pixi-diff-to-markdown = "pixi_diff_to_markdown.__main__:app"

[tool.ruff]
line-length = 88

[tool.ruff.lint]
ignore = [
  "N803", # https://docs.astral.sh/ruff/rules/invalid-argument-name
  "N806", # https://docs.astral.sh/ruff/rules/non-lowercase-variable-in-function
  "E501", # https://docs.astral.sh/ruff/faq/#is-the-ruff-linter-compatible-with-black
]
select = [
  # pyflakes
  "F",
  # pycodestyle
  "E",
  "W",
  # isort
  "I",
  # pep8-naming
  "N",
  # pyupgrade
  "UP",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = '3.12'
no_implicit_optional = true
check_untyped_defs = true

[tool.typos.default.extend-words]
ba = "ba"

# If you run into `missing library stubs or py.typed marker` errors
# and no stubs are available for this library, you can add an override
# to ignore the missing imports.
# [[tool.mypy.overrides]]
# module = ["my_module"]
# ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
