[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pixi-diff-to-markdown"
version = "0.3.3"
description = "Tool for converting `pixi update` diffs to markdown"
authors = [{ name = "Pavel Zwerschke", email = "pavelzw@gmail.com" }]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.13",
]
requires-python = ">=3.13"
readme = "README.md"
dependencies = [
  "pydantic >=2.11.4,<3",
  "py-rattler >=0.14.0,<0.15",
  "ordered-enum >=0.0.9,<0.0.10",
  "typer >=0.16.0,<0.17",
  "pydantic-settings >=2.9.1,<3",
  "more-itertools >=10.7.0,<11",
]

[project.urls]
repository = "https://github.com/pavelzw/pixi-diff-to-markdown"

[project.scripts]
pixi-diff-to-markdown = "pixi_diff_to_markdown.__main__:app"

[tool.ruff]
line-length = 88

[tool.ruff.lint]
ignore = [
  "N803", # https://docs.astral.sh/ruff/rules/invalid-argument-name
  "N806", # https://docs.astral.sh/ruff/rules/non-lowercase-variable-in-function
  "E501", # https://docs.astral.sh/ruff/faq/#is-the-ruff-linter-compatible-with-black
]
select = [
  # pyflakes
  "F",
  # pycodestyle
  "E",
  "W",
  # isort
  "I",
  # pep8-naming
  "N",
  # pyupgrade
  "UP",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.typos.default.extend-words]
ba = "ba"

[tool.pytest.ini_options]
testpaths = ["tests"]
